# datafunc

./: .gitignore  .readthedocs.yml  README.md  mkdocs.yml  pydoc-markdown.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
datafunc/: __init__.py
docs/: 404.html  index.html  index.md
docs/search/: search_index.json
docs/templates/python/material/: signature.html
site/: 404.html
